exec/secret&ingress/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: jenkins
   namespace: jenkins
   annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      cert-manager.io/cluster-issuer: letsencrypt
spec:
   tls:
   - hosts:
     - jenkins.gaenari.kr
     secretName: jenkins-ingress-tls
   rules:
   - host: jenkins.gaenari.kr
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
            service:
               name: jenkins
               port:
                  number: 8080
